# dafeng-server

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
script/: base64tomp3.py  bigread_parse_save.py  doubao.py  doubao_vision.py  md2db.py  md_segment.py  pdfSpliter.py  request_to_bigread.py
src/main/: apiserver.py
src/main/app/: router.py  server.py
src/main/app/common/: result.py
src/main/app/controller/: connection_controller.py  database_controller.py  field_controller.py  gen_field_controller.py  gen_table_column_controller.py  gen_table_controller.py  index_controller.py  member_controller.py  openapi_controller.py  read_global_word_controller.py  read_new_word_controller.py  sys_dict_data_controller.py  sys_dict_type_controller.py  sys_menu_controller.py  sys_role_controller.py  sys_role_menu_controller.py  sys_user_role_controller.py  table_controller.py  tool_controller.py  user_controller.py
src/main/app/mapper/: connection_mapper.py  database_mapper.py  field_mapper.py  gen_field_mapper.py  gen_table_column_mapper.py  gen_table_mapper.py  index_mapper.py  mapper_base.py  mapper_base_impl.py  member_mapper.py  read_global_word_mapper.py  read_new_word_mapper.py  sys_dict_data_mapper.py  sys_dict_type_mapper.py  sys_menu_mapper.py  sys_role_mapper.py  sys_role_menu_mapper.py  sys_user_role_mapper.py  table_mapper.py  user_mapper.py
src/main/app/model/: connection_model.py  database_model.py  db_connection_model.py  db_database_model.py  db_field_model.py  db_index_model.py  db_table_model.py  field_model.py  gen_field_model.py  gen_table_field_model.py  (+15 more)
src/main/pkg/: server.py
src/main/python/: server.py
src/main/resource/: config-dev.yml  config-prod.yml  config.yml
src/tests/: main.py
(+210 files in other folders)
