[project]
name = "dafeng-server"
version = "0.1.0"
description = "Da feng helps us work more easily and happily"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.3",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.3",
    "aiosqlite>=0.20.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "loguru>=0.7.2",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
