[project]
name = "dafeng-server"
version = "0.1.0"
description = "Da feng helps us work more easily and happily"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.3",
    "sqlmodel>=0.0.22",
    "alembic>=1.13.3",
    "aiosqlite>=0.20.0",
    "pyjwt>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "loguru>=0.7.2",
    "aiomysql>=0.2.0",
    "pandas>=2.2.3",
    "xlsxwriter>=3.2.0",
    "openpyxl>=3.1.5",
    "markdown>=3.7",
    "beautifulsoup4>=4.12.3",
    "asyncpg>=0.30.0",
    "psycopg2>=2.9.10",
    "requests>=2.32.3",
    "pypdf2>=3.0.1",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff]
include = ["src/**/*.py"]
exclude = ["doc/**/*.py"]
line-length = 120
